--- a/ganga-clean.ipynb
+++ b/ganga-clean.ipynb
@@ -1454,11 +1454,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 372,
    "id": "7f06df65",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"./stations_cleaned.csv\")"
+   ]
   }
  ],
  "metadata": {
